--- a/index.html
+++ b/index.html
@@ -5,32 +5,39 @@
 <title>SAMPLE</title>
 <style>
 
-a	{color: #017acd}
+a	{color: #017acd;
+}
 
 /* コンテナ */
 div#container	{
 	width: 760px;
 	margin-left: auto;
-	margin-right: auto}
+	margin-right: auto;
+}
 
 /* ヘッダー */
-header	{
+#pageheader	{
 	background-color: #017acd;
 	background-image: url(sky.jpg);
-	padding: 28px 20px 150px}
+	padding: 28px 20px 150px;
+}
 
-header h1	{margin: 0}
+#pageheader h1	{
+	margin: 0;
+}
 
-header p	{
+#pageheader p	{
 	color: #ffffff;
 	font-size: 0.75em;
-	margin: 0}
+	margin: 0;
+}
 
 /* パンくずリスト */
 nav#bread	{
 	font-size: 0.75em;
 	margin-top: 3px;
-	margin-bottom: 30px}
+	margin-bottom: 30px;
+}
 
 
 /* コンテンツ */
@@ -39,9 +46,10 @@ article	{
 	float: right;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 25px}
+	margin-bottom: 25px;
+}
 
-article h2	{
+article header h1{
 	background-color: #014471;
 	background-image: url(bar-blue.png);
 	background-repeat: no-repeat;
@@ -50,9 +58,10 @@ article h2	{
 	line-height: 28px;
 	padding-left: 6px;
 	margin-top: 0;
-	margin-bottom: 0}
+	margin-bottom: 0;
+}
 
-article h3	{
+article section h1	{
 	background-color: #e0e0e0;
 	background-image: url(bar-green.png);
 	background-repeat: no-repeat;
@@ -60,28 +69,34 @@ article h3	{
 	line-height: 23px;
 	padding-left: 30px;
 	margin-top: 30px;
-	margin-bottom: 0}
+	margin-bottom: 0;
+}
 
 article p	{
 	font-size: 0.75em;
 	line-height: 1.6;
-	margin-top: 10px}
+	margin-top: 10px;
+}
 
 
 /* サイドバー */
 div#sidebar	{
 	width: 166px;
 	float: left;
-	margin-bottom: 25px}
+	margin-bottom: 25px;
+}
 
 div#sidebar nav ul	{
 	font-size: 0.75em;
 	margin-top: 0;
 	margin-left: 0;
 	padding-left: 0;
-	line-height: 0}
+	line-height: 0;
+}
 
-div#sidebar nav ul li	{list-style-type: none}
+div#sidebar nav ul li	{
+	list-style-type: none;
+}
 
 div#sidebar nav ul li a	{
 	display: block;
@@ -90,11 +105,16 @@ div#sidebar nav ul li a	{
 	color: #ffffff;
 	background-color: #005087;
 	border-bottom: solid 1px #ffffff;
-	padding-left: 10px}
+	padding-left: 10px;
+}
 
-div#sidebar nav ul li a:hover	{background-color: #017acd}
+div#sidebar nav ul li a:hover	{
+	background-color: #017acd;
+}
 
-div#sidebar aside	{margin-bottom: 10px}
+div#sidebar aside	{
+	margin-bottom: 10px;
+}
 
 div#sidebar aside a	{
 	font-size: 0.75em;
@@ -102,11 +122,13 @@ div#sidebar aside a	{
 	text-decoration: none;
 	line-height: 30px;
 	border: solid 1px #888888;
-	padding: 5px}
+	padding: 5px;
+}
 
 div#sidebar aside img	{
 	border: none;
-	vertical-align: middle}
+	vertical-align: middle;
+}
 
 
 /* フッター */
@@ -116,13 +138,15 @@ footer {
 	width: 760px;
 	margin-top: 0;
 	padding-top: 8px;
-	clear: both;}
+	clear: both;
+	}
 
 small{
 	font-size: 0.75em;
 	font-style: normal;
 	text-align: center;
-	display:block;}
+	display:block;
+}
 
 </style>
 </head>
@@ -132,7 +156,7 @@ small{
 <div id="container">
 
 <!-- ヘッダー -->
-<header>
+<header id="pageheader">
 <h1><img src="logo.gif" alt="Green Leaf" /></h1>
 <p>生活を楽しくする情報をもっと身近にお届けします</p>
 </header>
@@ -148,12 +172,14 @@ small{
 
 <article>
 	
-	<h2>サービス案内</h2>
-	
-	<p>Green Leafは生活を楽しくするサービスを、もっと身近にお届けするために活動している企業グループです。情報サイトやショッピングサイトを通じてさまざまなサービスの提供を行い、みなさまをサポートいたします。</p>
+	<header id="postheader">
+		<h1>サービス案内</h1>
+		
+		<p>Green Leafは生活を楽しくするサービスを、もっと身近にお届けするために活動している企業グループです。情報サイトやショッピングサイトを通じてさまざまなサービスの提供を行い、みなさまをサポートいたします。</p>
+	</header>
 	
 	<section>
-		<h3>情報サイト「Green Leaf」</h3>
+		<h1>情報サイト「Green Leaf」</h1>
 		
 		<p>情報サイト「Green Leaf」では、「生活を楽しくするサービスをもっと身近に」をテーマに、日常生活で役に立つサービスの情報をお届けします。生活を楽しくするためには、「衣」「食」「住」を満たすことが大切です。そのために必要な情報を充実させました。最新のファッション事情から洋服のリサイクル情報、安全でおいしい食材にレシピ、それを味わえるレストラン、住まいを快適にアレンジするテクニック、職人に支えられた伝統の技などなど… 楽しみながら活用していただければと思います。</p>
 		
@@ -161,7 +187,7 @@ small{
 	</section>
 	
 	<section>
-    	<h3>ショッピングサイト「Green Shop」</h3>
+    	<h1>ショッピングサイト「Green Shop」</h1>
 		
 		<p>ショッピングサイト「Green Shop」では、情報サイト「Green Leaf」で紹介した "いいもの" や "おもしろいもの" を購入していただけるようにしています。</p>
 		
@@ -200,5 +226,6 @@ small{
 <small>Copyright (C) Green Leaf, All rights reserved.</small>
 </footer>
 
+</div>
 </body>
 </html>
