--- a/index.html
+++ b/index.html
@@ -2,34 +2,59 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>SAMPLE</title>
+<title>サービス案内</title>
+
+<link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
+
 <style>
+
+body{
+	font-family: 'メイリオ','Hiragino Kaku Gothic Pro',sans-serif;
+	background-color: #e5e5e5;
+	margin: 0;
+}
 
 a	{color: #017acd;
 }
 
 /* コンテナ */
 div#container	{
-	width: 760px;
+	width: 900px;
 	margin-left: auto;
 	margin-right: auto;
+	background-color: #ffffff;
+	padding: 0 40px;
+	-webkit-box-shadow: 0px 0px 50px #bbbbbb;
+	box-shadow: 0px 0px 50px #bbbbbb;
+	background-image: url(src/circle.png),url(src/circle-yellow.png);
+	background-repeat: no-repeat;
+	background-position: 15px 420px, 90px 500px;
+	background-size: 94px 94px, 30px 30px;
+	position: relative;
+	overflow: hidden;
 }
 
 /* ヘッダー */
 #pageheader	{
-	background-color: #017acd;
-	background-image: url(sky.jpg);
-	padding: 28px 20px 150px;
+	background: none;
+	padding: 15px 0px 0px;
 }
 
 #pageheader h1	{
 	margin: 0;
+	float: left;
+	font-size: 40px;
+	font-weight: normal;
+	font-family: 'Righteous',cursive;
 }
 
 #pageheader p	{
-	color: #ffffff;
+	color: #666666;
 	font-size: 0.75em;
 	margin: 0;
+	padding-top: 20px;
+	text-align: right;
+	font-weight: normal;
 }
 
 /* パンくずリスト */
@@ -37,45 +62,82 @@ nav#bread	{
 	font-size: 0.75em;
 	margin-top: 3px;
 	margin-bottom: 30px;
+	clear: both;
 }
 
 
 /* コンテンツ */
 article	{
-	width: 564px;
-	float: right;
+	width: auto;
+    float: right;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 25px;
 }
 
+article header{
+	border: solid 1px #aaaaaa;
+	margin: 20px 0px 10px;
+	padding: 18px;
+	border-radius: 5px;
+	background-color: rgba(255,255,255,0.5);
+	-webkit-box-shadow: 0px 2px 3px #cccccc,
+	                    0px 0px 4px 3px #ffffff inset;
+	box-shadow: 0px 2px 3px #cccccc,
+	            0px 0px 4px 3px #ffffff inset;
+}
+
 article header h1{
-	background-color: #014471;
-	background-image: url(bar-blue.png);
-	background-repeat: no-repeat;
-	font-size: 0.875em;
-	color: #ffffff;
-	line-height: 28px;
-	padding-left: 6px;
-	margin-top: 0;
-	margin-bottom: 0;
+	background: none;
+	font-size: 28px;
+	color: #000000;
+	line-height: 45px;
+	padding-left: 0;
+	margin: 0;
+	font-weight: normal;
+	float: left;
+}
+
+article header p{
+	font-size: 16px;
+	color:#444444;
+	margin-left: 300px;
+}
+
+article section{
+	clear: both;
+	border: solid 1px #aaaaaa;
+	margin: 20px 0 10px;
+	padding: 18px;
+	border-radius: 5px;
+	-webkit-box-shadow: 0px 2px 3px #cccccc,
+	                    0px 0px 4px 3px #ffffff inset;
+	box-shadow: 0px 2px 3px #cccccc,
+	            0px 0px 4px 3px #ffffff inset;
+	background: -webkit-linear-gradient(#ffffff 0%,#dfdfdf 100%);
+	background: -moz-linear-gradient(#ffffff 0%,#dfdfdf 100%);
+	background: -o-linear-gradient(#ffffff 0%,#dfdfdf 100%);
+	background: -ms-linear-gradient(#ffffff 0%,#dfdfdf 100%);
 }
 
 article section h1	{
-	background-color: #e0e0e0;
-	background-image: url(bar-green.png);
-	background-repeat: no-repeat;
-	font-size: 0.875em;
+	background: none;
+	font-size: 24px;
+	font-weight: normal;
 	line-height: 23px;
-	padding-left: 30px;
+	padding-left: 0;
 	margin-top: 30px;
-	margin-bottom: 0;
+	margin-bottom: 20px;
+	margin-left: 0;
+	margin-right: 0;
 }
 
 article p	{
 	font-size: 0.75em;
 	line-height: 1.6;
 	margin-top: 10px;
+	margin-left: 0;
+	margin-right: 0;
 }
 
 
@@ -84,6 +146,7 @@ div#sidebar	{
 	width: 166px;
 	float: left;
 	margin-bottom: 25px;
+	overflow: hidden;
 }
 
 div#sidebar nav ul	{
@@ -92,6 +155,13 @@ div#sidebar nav ul	{
 	margin-left: 0;
 	padding-left: 0;
 	line-height: 0;
+	background-color: #333333;
+	border-radius: 5px;
+	background: -webkit-linear-gradient(135deg,#000000 0%,#222222 20%,
+		                                       #777777 100%);
+	background: -moz-linear-gradient(135deg,#777777 0%,#555555 100%);
+	background: -o-linear-gradient(135deg,#777777 0%,#555555 100%);
+	background: -ms-linear-gradient(135deg,#777777 0%,#555555 100%);
 }
 
 div#sidebar nav ul li	{
@@ -103,14 +173,22 @@ div#sidebar nav ul li a	{
 	line-height: 30px;
 	text-decoration: none;
 	color: #ffffff;
-	background-color: #005087;
-	border-bottom: solid 1px #ffffff;
+	border-bottom: solid 1px rgba(255,255,255,0.2);
 	padding-left: 10px;
 }
 
 div#sidebar nav ul li a:hover	{
-	background-color: #017acd;
+	background-color: rgba(1,122,205,0.3);
 }
+
+div#sidebar nav ul li:first-of-type a:hover{
+	border-radius: 5px 5px 0 0;
+}
+
+div#sidebar nav ul li:last-of-type a:hover{
+	border-radius: 0 0 5px 5px;
+}
+
 
 div#sidebar aside	{
 	margin-bottom: 10px;
@@ -133,19 +211,34 @@ div#sidebar aside img	{
 
 /* フッター */
 footer {
-	background-image: url(line-blue.png);
-	background-repeat: repeat-x;
-	width: 760px;
+	color: #888888;
 	margin-top: 0;
 	padding-top: 8px;
 	clear: both;
+	border-top: solid 1px #aaaaaa;
 	}
 
 small{
 	font-size: 0.75em;
 	font-style: normal;
-	text-align: center;
+	text-align: left;
 	display:block;
+}
+
+small::before{
+	content: 'GREEN LEAF';
+	display: block;
+	width: 200px;
+	padding: 10px 0;
+	background-color: #880000;
+	color: #ffffff;
+	font-family: 'Rightteous',cursive;
+	font-size: 16px;
+	text-align: center;
+	position: absolute;
+	right:0;
+	bottom: 0;
+	-webkit-transform: rotate(-45deg) translate(62px,20px);
 }
 
 </style>
@@ -157,8 +250,11 @@ small{
 
 <!-- ヘッダー -->
 <header id="pageheader">
-<h1><img src="logo.gif" alt="Green Leaf" /></h1>
+<h1>Green Leaf</h1>
 <p>生活を楽しくする情報をもっと身近にお届けします</p>
+
+<img src="src/header.jpg" height="300" width="900" alt="">
+
 </header>
 
 <!-- パンくずリスト -->
@@ -166,7 +262,6 @@ small{
 <a href="link.html">トップページ</a> &gt;
 <a href="link.html">サービス案内</a>
 </nav>
-
 
 <!-- コンテンツ -->
 
@@ -211,15 +306,14 @@ small{
 </nav>
 
 <aside>
-	<a href="feed.xml">
-	<img src="feed-icon-14x14.png" alt="RSS" />
-	RSSフィード
-	</a>
+		<a href="feed.xml">
+			<img src="feed-icon-14x14.png" alt="RSS" />
+			  RSSフィード
+		</a>
 </aside>
 
 
 </div>
-
 
 <!-- フッター -->
 <footer>
