src追加、sample.aのように装飾

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ div#container	{
 	box-shadow: 0px 0px 50px #bbbbbb;
 	background-image: url(src/circle.png),url(src/circle-yellow.png);
 	background-repeat: no-repeat;
-	background-position: 15px 420px, 90px 500px;
+	background-position: 215px 410px, 290px 490px;
 	background-size: 94px 94px, 30px 30px;
 	position: relative;
 	overflow: hidden;
@@ -68,16 +68,16 @@ nav#bread	{
 
 /* コンテンツ */
 article	{
-	width: auto;
+	width: 700px;
     float: right;
-	margin-left: auto;
-	margin-right: auto;
+	//margin-left: auto;
+	//margin-right: auto;
 	margin-bottom: 25px;
 }
 
 article header{
 	border: solid 1px #aaaaaa;
-	margin: 20px 0px 10px;
+	margin: 0px 0px 10px;
 	padding: 18px;
 	border-radius: 5px;
 	background-color: rgba(255,255,255,0.5);
@@ -126,7 +126,7 @@ article section h1	{
 	font-weight: normal;
 	line-height: 23px;
 	padding-left: 0;
-	margin-top: 30px;
+	margin-top: 10px;
 	margin-bottom: 20px;
 	margin-left: 0;
 	margin-right: 0;
@@ -146,7 +146,6 @@ div#sidebar	{
 	width: 166px;
 	float: left;
 	margin-bottom: 25px;
-	overflow: hidden;
 }
 
 div#sidebar nav ul	{
@@ -232,7 +231,7 @@ small::before{
 	padding: 10px 0;
 	background-color: #880000;
 	color: #ffffff;
-	font-family: 'Rightteous',cursive;
+	font-family: 'Righteous',cursive;
 	font-size: 16px;
 	text-align: center;
 	position: absolute;
@@ -259,8 +258,8 @@ small::before{
 
 <!-- パンくずリスト -->
 <nav id="bread">
-<a href="link.html">トップページ</a> &gt;
-<a href="link.html">サービス案内</a>
+<a href="http://wp15002.github.io/html.2nd/">トップページ</a> &gt;
+<a href="index.html">サービス案内</a>
 </nav>
 
 <!-- コンテンツ -->
@@ -297,10 +296,10 @@ small::before{
 <div id="sidebar">
 <nav>	
 	<ul>
-	<li><a href="link.html">トップページ</a></li>
+	<li><a href="http://wp15002.github.io/html.2nd/">トップページ</a></li>
 	<li><a href="link.html">会社情報</a></li>
-	<li><a href="link.html">サービス案内</a></li>
-	<li><a href="link.html">お問い合わせ</a></li>
+	<li><a href="index.html">サービス案内</a></li>
+	<li><a href="http://wp15002.github.io/html.4th/">お問い合わせ</a></li>
 	<li><a href="link.html">ブログ</a></li>
 	</ul>
 </nav>
