ベンダープレフィックスを追加

--- a/index.html
+++ b/index.html
@@ -238,6 +238,9 @@ small::before{
 	right:0;
 	bottom: 0;
 	-webkit-transform: rotate(-45deg) translate(62px,20px);
+	-moz-transform:rotate(-45deg) translate(62px,20px);
+	-o-transform:rotate(-45deg) translate(62px,20px);
+	-ms-transform:rotate(-45deg) translate(62px,20px);
 }
 
 </style>
