2段組みの設定を追加

--- a/index.html
+++ b/index.html
@@ -243,6 +243,27 @@ small::before{
 	-ms-transform:rotate(-45deg) translate(62px,20px);
 }
 
+
+/*====== PC 用の設定 ======*/
+@media only screen and (min-width:900px){
+/* 2段組み */
+article div[itemprop="articleBody"]{
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-box;
+}
+
+article section{
+	width: 340px;
+	margin-right: 20px;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	overflow: visible;
+}
+
+
+}
 /*====== タブッレット 用の設定 ======*/
 @media only screen and (min-width: 600px) and (max-width: 899px){
 
@@ -349,23 +370,24 @@ article header p{
 		
 		<p>Green Leafは生活を楽しくするサービスを、もっと身近にお届けするために活動している企業グループです。情報サイトやショッピングサイトを通じてさまざまなサービスの提供を行い、みなさまをサポートいたします。</p>
 	</header>
+      <div itemprop="articleBody">
 	
-	<section>
-		<h1>情報サイト「Green Leaf」</h1>
+		<section>
+			<h1>情報サイト「Green Leaf」</h1>
+			
+			<p>情報サイト「Green Leaf」では、「生活を楽しくするサービスをもっと身近に」をテーマに、日常生活で役に立つサービスの情報をお届けします。生活を楽しくするためには、「衣」「食」「住」を満たすことが大切です。そのために必要な情報を充実させました。最新のファッション事情から洋服のリサイクル情報、安全でおいしい食材にレシピ、それを味わえるレストラン、住まいを快適にアレンジするテクニック、職人に支えられた伝統の技などなど… 楽しみながら活用していただければと思います。</p>
+			
+			<p>また、「遊」を充実させる情報として、関東、関西圏を中心としたレジャーや癒しのスポットを紹介します。名所・旧跡に温泉、日帰り旅行からちょっとした贅沢な旅まで取り揃えていく予定です。</p>
+		</section>
 		
-		<p>情報サイト「Green Leaf」では、「生活を楽しくするサービスをもっと身近に」をテーマに、日常生活で役に立つサービスの情報をお届けします。生活を楽しくするためには、「衣」「食」「住」を満たすことが大切です。そのために必要な情報を充実させました。最新のファッション事情から洋服のリサイクル情報、安全でおいしい食材にレシピ、それを味わえるレストラン、住まいを快適にアレンジするテクニック、職人に支えられた伝統の技などなど… 楽しみながら活用していただければと思います。</p>
-		
-		<p>また、「遊」を充実させる情報として、関東、関西圏を中心としたレジャーや癒しのスポットを紹介します。名所・旧跡に温泉、日帰り旅行からちょっとした贅沢な旅まで取り揃えていく予定です。</p>
-	</section>
-	
-	<section>
-    	<h1>ショッピングサイト「Green Shop」</h1>
-		
-		<p>ショッピングサイト「Green Shop」では、情報サイト「Green Leaf」で紹介した "いいもの" や "おもしろいもの" を購入していただけるようにしています。</p>
-		
-		<p>そのほかにも、ショップ内のToy Boxコーナーではヨーロッパやアフリカの遊び心にあふれる玩具を、Candy Boxコーナーではカラフルでおいしいお菓子をたくさん扱っています。また、地域ごとの地場産野菜の宅配も承っておりますので、ぜひご利用ください。</p>
-	</section>
-
+		<section>
+	    	<h1>ショッピングサイト「Green Shop」</h1>
+			
+			<p>ショッピングサイト「Green Shop」では、情報サイト「Green Leaf」で紹介した "いいもの" や "おもしろいもの" を購入していただけるようにしています。</p>
+			
+			<p>そのほかにも、ショップ内のToy Boxコーナーではヨーロッパやアフリカの遊び心にあふれる玩具を、Candy Boxコーナーではカラフルでおいしいお菓子をたくさん扱っています。また、地域ごとの地場産野菜の宅配も承っておりますので、ぜひご利用ください。</p>
+		</section>
+      </div>
 </article>
 
 
