--- a/index.html
+++ b/index.html
@@ -247,13 +247,13 @@ small::before{
 /*====== PC 用の設定 ======*/
 @media only screen and (min-width:900px){
 /* 2段組み */
-article div[itemprop="articleBody"]{
+article div[id="articleBody2"]{
 	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-box;
 }
 
-article section{
+article div#articleBody2 section{
 	width: 340px;
 	margin-right: 20px;
 	box-sizing: border-box;
@@ -370,7 +370,7 @@ article header p{
 		
 		<p>Green Leafは生活を楽しくするサービスを、もっと身近にお届けするために活動している企業グループです。情報サイトやショッピングサイトを通じてさまざまなサービスの提供を行い、みなさまをサポートいたします。</p>
 	</header>
-      <div itemprop="articleBody">
+      <div id="articleBody2">
 	
 		<section>
 			<h1>情報サイト「Green Leaf」</h1>
