IE8~9に対応、修正

--- a/index.html
+++ b/index.html
@@ -264,13 +264,13 @@ article div#articleBody2 section{
 
 /* 2段組み IE8~9 & Opera */
 article div#articleBody2 section{
-	clear: both;
+	clear: none;
 	float: left;
 	position: relative;
 }
 
 article div#articleBody2 section+section{
-	margin: right;
+	margin-right: 0;
 }
 
 
